# pet-tamagotchi

./: .gitignore  Anchor.toml  FIRST_INSTRUCTIONS.md  PLAN.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: rust.yml
client/: example.ts  petClient.ts
programs/pet-tamagotchi/: Cargo.toml
programs/pet-tamagotchi/src/: lib.rs
tests/: pet_tamagotchi.ts
