[package]
name = "pet-tamagotchi"
version = "0.1.0"
description = "Solana pet care game using PDAs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pet_tamagotchi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.0"
